--- a/Douguo/template/theme/theme.html
+++ b/Douguo/template/theme/theme.html
@@ -1,3 +1,9 @@
 <div class="themeContent">
-	
+	<div class="themehead">
+		<ul>
+			<li><a href="#theme/alltheme">全部主题站</a></li>
+			<li><a href="#theme/allarticle">全部文章</a></li>
+		</ul>
+	</div>
+	<div ui-view></div>
 </div>
