--- a/Douguo/template/activity/activity.html
+++ b/Douguo/template/activity/activity.html
@@ -1,3 +1,14 @@
-<div class="content">
-	活动
+<div class="activityContent">
+	<div class="act_left" ui-view>
+		
+	</div>
+	<div class="act_right">
+		<ul>
+			<li><a href="#activity/allactive">全部活动</a></li>
+			<li><a href="#activity/mstyg">美食体验馆</a></li>
+			<li><a href="#activity/mskt">美食课堂</a></li>
+			<li><a href="#activity/cpzj">菜谱征集</a></li>
+			<li><a href="#activity/qthd">其他活动</a></li>
+		</ul>
+	</div>
 </div>
